--- a/deploy/crds/hackday_v1alpha1_statuspagecustomer_crd.yaml
+++ b/deploy/crds/hackday_v1alpha1_statuspagecustomer_crd.yaml
@@ -28,6 +28,24 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            clusterName:
+              type: string
+            components:
+              items:
+                type: string
+              type: array
+            email:
+              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                Important: Run "operator-sdk generate k8s" to regenerate code after
+                modifying this file Add custom validation using kubebuilder tags:
+                https://book.kubebuilder.io/beyond_basics/generating_crd.html email
+                clustername components: etcd, registry, api'
+              type: string
+          required:
+          - email
+          - clusterName
+          - components
           type: object
         status:
           type: object
