Mocked code for statuspageincident controller

--- a/deploy/crds/hackday_v1alpha1_statuspageincident_crd.yaml
+++ b/deploy/crds/hackday_v1alpha1_statuspageincident_crd.yaml
@@ -54,6 +54,11 @@ spec:
           - name
           type: object
         status:
+          properties:
+            scheduled:
+              type: boolean
+          required:
+          - scheduled
           type: object
   version: v1alpha1
   versions:
